objects/Report_Export_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds the settings for report export</description>
    <fields>
        <fullName>Attachment_File_Name__c</fullName>
        <label>Attachment File Name</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <description>This is the attachment format.  
application/vnd.ms-excel for excel file (default)
text/csv for csv file</description>
        <label>Content Type</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Body__c</fullName>
        <description>Optional plain text that goes to the email&apos;s body</description>
        <label>Email Body</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Recipient__c</fullName>
        <description>Email recipient</description>
        <label>Email Recipient</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <description>Subject of the email</description>
        <label>Email Subject</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Results_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Results Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Report Export Settings</label>
</CustomObject>